osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_time_bucket/test_get_timedelta_bucket_invalid_granularity.txt
error: invalid `granularity_seconds`
--> main.sml:1:76
     |
   1 | GetTimedeltaBucket(timedelta=TimeDelta(seconds=1136715),granularity_seconds=0)
     |                                                                             ^ granularity_seconds can not be less than 3600 (1 hour)